--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"bot_token": "TOKEN", "admin_ids": ["5588464519"], "user_file": "users.json", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"5588464519": 8769900}}
+{"bot_token": "6713530224:AAF76hxNIFtKiJ7fg02Qt0eyAy6w39_4XlU", "admin_ids": ["5672076193"], "user_file": "users.json", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"5672076193": 8769900}}
